// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormControl > Snapshot > With multiple field 1`] = `
.c0 {
  position: relative;
}

.c1 {
  padding: 0 2px;
  margin-bottom: 4px;
}

.c10 {
  padding: 0 2px;
  margin-top: 4px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c6 {
  -webkit-flex-basis: var(--main-axis-size);
  -ms-flex-preferred-size: var(--main-axis-size);
  flex-basis: var(--main-axis-size);
  -webkit-box-flex: var(--grow-weight);
  -webkit-flex-grow: var(--grow-weight);
  -ms-flex-positive: var(--grow-weight);
  flex-grow: var(--grow-weight);
  -webkit-flex-shrink: var(--shrink-weight);
  -ms-flex-negative: var(--shrink-weight);
  flex-shrink: var(--shrink-weight);
  margin-top: var(--margin-before);
  margin-bottom: var(--margin-after);
}

.c5 {
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c2 {
  font-size: 1.3rem;
  line-height: 1.8rem;
  margin: 0px 0px 0px 0px;
  font-style: normal;
  font-weight: 600;
  color: #000000D9;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: color;
  transition-property: color;
}

.c11 {
  font-size: 1.3rem;
  line-height: 1.8rem;
  margin: 0px 0px 0px 0px;
  font-style: normal;
  font-weight: normal;
  color: #00000066;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: color;
  transition-property: color;
}

.c3 {
  display: block;
  text-align: left;
  word-break: break-all;
}

.c8 {
  width: 100%;
  height: 100%;
  padding: 0;
  cursor: auto;
  background-color: transparent;
  border: none;
  outline: none;
  font-size: 1.4rem;
  line-height: 1.8rem;
  color: #000000D9;
}

.c8::-webkit-input-placeholder {
  color: #00000066;
}

.c8::-moz-placeholder {
  color: #00000066;
}

.c8:-ms-input-placeholder {
  color: #00000066;
}

.c8::placeholder {
  color: #00000066;
}

.c7 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  padding: 0 12px;
  background-color: #FCFCFC;
  overflow: hidden;
  border-radius: 8px;
  box-shadow: 0 1px 2px #0000000D, inset 0 0 0 1px #00000026;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: border-color,box-shadow;
  transition-property: border-color,box-shadow;
}

.c9 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  padding: 0 12px;
  background-color: #FFFFFF;
  overflow: hidden;
  border-radius: 8px;
  box-shadow: 0 1px 2px #0000000D, inset 0 0 0 1px #00000026;
  box-shadow: 0 0 0 3px #F4800B4D, inset 0 0 0 1px #F4800B;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: border-color,box-shadow;
  transition-property: border-color,box-shadow;
}

.c12 {
  display: block;
  text-align: left;
}

<div>
  <div
    class="c0"
    data-testid="bezier-react-form-control"
  >
    <div
      class="c0 c1"
    >
      <label
        class="c2 c3"
        color="txt-black-darkest"
        data-testid="bezier-react-form-label"
        id="form-label"
      >
        Label
      </label>
    </div>
    <div
      aria-describedby="form-help-text"
      aria-labelledby="form-label"
      class="c4 c5"
      data-testid="bezier-react-form-group"
      direction="vertical"
      id="form-group"
      role="group"
    >
      <div
        class="c6"
        data-testid="bezier-react-stack-item"
        direction="vertical"
        style="--main-axis-size: initial; --grow-weight: 0; --shrink-weight: 0; --margin-before: 0px; --margin-after: 0px;"
      >
        <div
          class="c0"
          data-testid="bezier-react-form-control"
        >
          <div
            class="c0 c1"
          >
            <label
              class="c2 c3"
              color="txt-black-darkest"
              data-testid="bezier-react-form-label"
              for="field-:r3:"
              id="field-:r3:-label"
            >
              First Inner Label
            </label>
          </div>
          <div
            class="c7"
            data-testid="bezier-react-text-input"
            size="36"
          >
            <input
              autocomplete="off"
              class="c8"
              id="field-:r3:"
              size="36"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="c6"
        data-testid="bezier-react-stack-item"
        direction="vertical"
        style="--main-axis-size: initial; --grow-weight: 0; --shrink-weight: 0; --margin-before: 6px; --margin-after: 0px;"
      >
        <div
          class="c0"
          data-testid="bezier-react-form-control"
        >
          <div
            class="c0 c1"
          >
            <label
              class="c2 c3"
              color="txt-black-darkest"
              data-testid="bezier-react-form-label"
              for="field-:r4:"
              id="field-:r4:-label"
            >
              Second Inner Label
            </label>
          </div>
          <div
            class="c9"
            data-testid="bezier-react-text-input"
            size="36"
          >
            <input
              aria-invalid="true"
              autocomplete="off"
              class="c8"
              id="field-:r4:"
              size="36"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c10"
    >
      <p
        class="c11 c12"
        color="txt-black-dark"
        data-testid="bezier-react-form-helper-text"
        id="form-help-text"
      >
        Description
      </p>
    </div>
  </div>
</div>
`;

exports[`FormControl > Snapshot > With multiple field and left label position 1`] = `
.c0 {
  position: relative;
}

.c8 {
  padding: 0 2px;
  margin-bottom: 4px;
}

.c13 {
  padding: 0 2px;
  margin-top: 4px;
}

.c1 {
  display: grid;
  grid-template-rows: repeat(2,auto);
  grid-template-columns: 150px 1fr;
  grid-column-gap: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-row: 1 / 1;
  grid-column: 1 / 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
  height: 36px;
}

.c14 {
  grid-row: 2 / 2;
  grid-column: 2;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c7 {
  -webkit-flex-basis: var(--main-axis-size);
  -ms-flex-preferred-size: var(--main-axis-size);
  flex-basis: var(--main-axis-size);
  -webkit-box-flex: var(--grow-weight);
  -webkit-flex-grow: var(--grow-weight);
  -ms-flex-positive: var(--grow-weight);
  flex-grow: var(--grow-weight);
  -webkit-flex-shrink: var(--shrink-weight);
  -ms-flex-negative: var(--shrink-weight);
  flex-shrink: var(--shrink-weight);
  margin-top: var(--margin-before);
  margin-bottom: var(--margin-after);
}

.c6 {
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c3 {
  font-size: 1.4rem;
  line-height: 1.8rem;
  margin: 0px 0px 0px 0px;
  font-style: normal;
  font-weight: 600;
  color: #000000D9;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: color;
  transition-property: color;
}

.c9 {
  font-size: 1.3rem;
  line-height: 1.8rem;
  margin: 0px 0px 0px 0px;
  font-style: normal;
  font-weight: 600;
  color: #000000D9;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: color;
  transition-property: color;
}

.c15 {
  font-size: 1.3rem;
  line-height: 1.8rem;
  margin: 0px 0px 0px 0px;
  font-style: normal;
  font-weight: normal;
  color: #00000066;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: color;
  transition-property: color;
}

.c4 {
  display: block;
  text-align: left;
  word-break: break-all;
}

.c11 {
  width: 100%;
  height: 100%;
  padding: 0;
  cursor: auto;
  background-color: transparent;
  border: none;
  outline: none;
  font-size: 1.4rem;
  line-height: 1.8rem;
  color: #000000D9;
}

.c11::-webkit-input-placeholder {
  color: #00000066;
}

.c11::-moz-placeholder {
  color: #00000066;
}

.c11:-ms-input-placeholder {
  color: #00000066;
}

.c11::placeholder {
  color: #00000066;
}

.c10 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  padding: 0 12px;
  background-color: #FCFCFC;
  overflow: hidden;
  border-radius: 8px;
  box-shadow: 0 1px 2px #0000000D, inset 0 0 0 1px #00000026;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: border-color,box-shadow;
  transition-property: border-color,box-shadow;
}

.c12 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  padding: 0 12px;
  background-color: #FFFFFF;
  overflow: hidden;
  border-radius: 8px;
  box-shadow: 0 1px 2px #0000000D, inset 0 0 0 1px #00000026;
  box-shadow: 0 0 0 3px #F4800B4D, inset 0 0 0 1px #F4800B;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: border-color,box-shadow;
  transition-property: border-color,box-shadow;
}

.c16 {
  display: block;
  text-align: left;
}

<div>
  <div
    class="c0 c1"
    data-testid="bezier-react-form-control"
  >
    <div
      class="c0 c2"
      height="36"
    >
      <label
        class="c3 c4"
        color="txt-black-darkest"
        data-testid="bezier-react-form-label"
        id="form-label"
      >
        Label
      </label>
    </div>
    <div
      aria-describedby="form-help-text"
      aria-labelledby="form-label"
      class="c5 c6"
      data-testid="bezier-react-form-group"
      direction="vertical"
      id="form-group"
      role="group"
    >
      <div
        class="c7"
        data-testid="bezier-react-stack-item"
        direction="vertical"
        style="--main-axis-size: initial; --grow-weight: 0; --shrink-weight: 0; --margin-before: 0px; --margin-after: 0px;"
      >
        <div
          class="c0"
          data-testid="bezier-react-form-control"
        >
          <div
            class="c0 c8"
          >
            <label
              class="c9 c4"
              color="txt-black-darkest"
              data-testid="bezier-react-form-label"
              for="field-:r6:"
              id="field-:r6:-label"
            >
              First Inner Label
            </label>
          </div>
          <div
            class="c10"
            data-testid="bezier-react-text-input"
            size="36"
          >
            <input
              autocomplete="off"
              class="c11"
              id="field-:r6:"
              size="36"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="c7"
        data-testid="bezier-react-stack-item"
        direction="vertical"
        style="--main-axis-size: initial; --grow-weight: 0; --shrink-weight: 0; --margin-before: 6px; --margin-after: 0px;"
      >
        <div
          class="c0"
          data-testid="bezier-react-form-control"
        >
          <div
            class="c0 c8"
          >
            <label
              class="c9 c4"
              color="txt-black-darkest"
              data-testid="bezier-react-form-label"
              for="field-:r7:"
              id="field-:r7:-label"
            >
              Second Inner Label
            </label>
          </div>
          <div
            class="c12"
            data-testid="bezier-react-text-input"
            size="36"
          >
            <input
              aria-invalid="true"
              autocomplete="off"
              class="c11"
              id="field-:r7:"
              size="36"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c13 c14"
    >
      <p
        class="c15 c16"
        color="txt-black-dark"
        data-testid="bezier-react-form-helper-text"
        id="form-help-text"
      >
        Description
      </p>
    </div>
  </div>
</div>
`;

exports[`FormControl > Snapshot > With single field 1`] = `
.c0 {
  position: relative;
}

.c1 {
  padding: 0 2px;
  margin-bottom: 4px;
}

.c6 {
  padding: 0 2px;
  margin-top: 4px;
}

.c2 {
  font-size: 1.3rem;
  line-height: 1.8rem;
  margin: 0px 0px 0px 0px;
  font-style: normal;
  font-weight: 600;
  color: #000000D9;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: color;
  transition-property: color;
}

.c7 {
  font-size: 1.3rem;
  line-height: 1.8rem;
  margin: 0px 0px 0px 0px;
  font-style: normal;
  font-weight: normal;
  color: #00000066;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: color;
  transition-property: color;
}

.c3 {
  display: block;
  text-align: left;
  word-break: break-all;
}

.c5 {
  width: 100%;
  height: 100%;
  padding: 0;
  cursor: auto;
  background-color: transparent;
  border: none;
  outline: none;
  font-size: 1.4rem;
  line-height: 1.8rem;
  color: #000000D9;
}

.c5::-webkit-input-placeholder {
  color: #00000066;
}

.c5::-moz-placeholder {
  color: #00000066;
}

.c5:-ms-input-placeholder {
  color: #00000066;
}

.c5::placeholder {
  color: #00000066;
}

.c4 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  padding: 0 12px;
  background-color: #FCFCFC;
  overflow: hidden;
  border-radius: 8px;
  box-shadow: 0 1px 2px #0000000D, inset 0 0 0 1px #00000026;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: border-color,box-shadow;
  transition-property: border-color,box-shadow;
}

.c8 {
  display: block;
  text-align: left;
}

<div
  class="c0"
  data-testid="bezier-react-form-control"
>
  <div
    class="c0 c1"
  >
    <label
      class="c2 c3"
      color="txt-black-darkest"
      data-testid="bezier-react-form-label"
      for="form"
      id="form-label"
    >
      Label
    </label>
  </div>
  <div
    class="c4"
    data-testid="bezier-react-text-input"
    size="36"
  >
    <input
      aria-describedby="form-help-text"
      autocomplete="off"
      class="c5"
      id="form"
      size="36"
      value=""
    />
  </div>
  <div
    class="c0 c6"
  >
    <p
      class="c7 c8"
      color="txt-black-dark"
      data-testid="bezier-react-form-helper-text"
      id="form-help-text"
    >
      Description
    </p>
  </div>
</div>
`;

exports[`FormControl > Snapshot > With single field and left label position 1`] = `
.c0 {
  position: relative;
}

.c7 {
  padding: 0 2px;
  margin-top: 4px;
}

.c1 {
  display: grid;
  grid-template-rows: repeat(2,auto);
  grid-template-columns: 150px 1fr;
  grid-column-gap: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-row: 1 / 1;
  grid-column: 1 / 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
  height: 36px;
}

.c8 {
  grid-row: 2 / 2;
  grid-column: 2;
}

.c3 {
  font-size: 1.4rem;
  line-height: 1.8rem;
  margin: 0px 0px 0px 0px;
  font-style: normal;
  font-weight: 600;
  color: #000000D9;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: color;
  transition-property: color;
}

.c9 {
  font-size: 1.3rem;
  line-height: 1.8rem;
  margin: 0px 0px 0px 0px;
  font-style: normal;
  font-weight: normal;
  color: #00000066;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: color;
  transition-property: color;
}

.c4 {
  display: block;
  text-align: left;
  word-break: break-all;
}

.c6 {
  width: 100%;
  height: 100%;
  padding: 0;
  cursor: auto;
  background-color: transparent;
  border: none;
  outline: none;
  font-size: 1.4rem;
  line-height: 1.8rem;
  color: #000000D9;
}

.c6::-webkit-input-placeholder {
  color: #00000066;
}

.c6::-moz-placeholder {
  color: #00000066;
}

.c6:-ms-input-placeholder {
  color: #00000066;
}

.c6::placeholder {
  color: #00000066;
}

.c5 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  padding: 0 12px;
  background-color: #FCFCFC;
  overflow: hidden;
  border-radius: 8px;
  box-shadow: 0 1px 2px #0000000D, inset 0 0 0 1px #00000026;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: border-color,box-shadow;
  transition-property: border-color,box-shadow;
}

.c10 {
  display: block;
  text-align: left;
}

<div
  class="c0 c1"
  data-testid="bezier-react-form-control"
>
  <div
    class="c0 c2"
    height="36"
  >
    <label
      class="c3 c4"
      color="txt-black-darkest"
      data-testid="bezier-react-form-label"
      for="form"
      id="form-label"
    >
      Label
    </label>
  </div>
  <div
    class="c5"
    data-testid="bezier-react-text-input"
    size="36"
  >
    <input
      aria-describedby="form-help-text"
      autocomplete="off"
      class="c6"
      id="form"
      size="36"
      value=""
    />
  </div>
  <div
    class="c0 c7 c8"
  >
    <p
      class="c9 c10"
      color="txt-black-dark"
      data-testid="bezier-react-form-helper-text"
      id="form-help-text"
    >
      Description
    </p>
  </div>
</div>
`;
